check job only fmt for src/

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           deno-version: v2.x
       - name: Check format
-        run: deno fmt --check
+        run: deno fmt --check src/
       - name: Check lint
         run: deno lint .
   deploy:
