--- a/deno.json
+++ b/deno.json
@@ -11,5 +11,10 @@
       "es2015",
       "dom"
     ]
+  },
+  "imports": {
+    "geojson": "npm:geojson@^0.5.0",
+    "leaflet": "npm:leaflet@^1.9.4",
+    "murmur-32": "npm:murmur-32@^1.0.0"
   }
 }
