--- a/deno.json
+++ b/deno.json
@@ -15,6 +15,7 @@
   "imports": {
     "geojson": "npm:geojson@^0.5.0",
     "leaflet": "npm:leaflet@^1.9.4",
+    "leaflet-extra-markers": "npm:leaflet-extra-markers@^1.2.2",
     "murmur-32": "npm:murmur-32@^1.0.0"
   }
 }
